Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <h3>
 <a id="suporte-e-contato" class="anchor" href="#suporte-e-contato" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Suporte e Contato</h3>
 
-<p>Veja a documentação <a href="https://help.github.com/pages">documentação</a> ou <a href="http://www.cassiobp.com.br">entre em contato</a>.</p>
+<p>Veja a documentação <a href="http://cassiodeveloper.github.io/robotsexplorer">documentação</a> ou <a href="http://www.cassiobp.com.br">entre em contato</a>.</p>
       </section>
     </div>
 
