Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
     <div class="container">
       <section id="main_content">
-        <h3>
+        <p><img src="https://travis-ci.org/cassiodeveloper/robotsexplorer.svg?branch=master" alt="Build"></p>
+
+<h3>
 <a id="bem-vindo" class="anchor" href="#bem-vindo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Bem vindo</h3>
 
 <p>Esta página foi criada para apresentar melhor a ferramenta Robots Explorer.</p>
